Proyecto Pair Programming/force-app/main/default/objects/TrailModule__c.object
<CustomObject>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <referenceTo>Module__c</referenceTo>
        <relationshipName>TraiModules</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Points__c</fullName>
        <label>PointsTrailModule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TimeTrailModule__c</fullName>
        <label>TimeTrailModule</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Trail__c</fullName>
        <label>Trail</label>
        <referenceTo>Trail__c</referenceTo>
        <relationshipName>TraiModules</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>TrailModule</label>
    <nameField>
        <label>TrailModule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>TrailModules</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>ModuleIsActive</fullName>
        <active>true</active>
        <errorConditionFormula>IF(Module__r.Active__c == false, true, false)</errorConditionFormula>
        <errorMessage>active must be true</errorMessage>
    </validationRules>
</CustomObject>